@@ -1,5 +1,11 @@
 2004-03-04  Alexander Larsson  <alexl@redhat.com>
 
+	* modules/http-method.c (make_propfind_request):
+	Handle redirects in PROPFIND.
+	Force slash on end of uri for open_directory.
+
+2004-03-04  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Actually define HAVE_OPENSSL when used.
 
